--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
+    "passport-google-oidc": "^0.1.0",
     "passport-local": "^1.0.0",
     "sqlite3": "^5.0.2"
   }
