--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "passport": "^0.6.0",
     "passport-google-oidc": "^0.1.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "sqlite3": "^5.0.2"
   }
 }
